--- a/tipcalculator/TipViewController.xib
+++ b/tipcalculator/TipViewController.xib
@@ -19,49 +19,49 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Bill" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fV6-wt-CSP">
-                    <rect key="frame" x="19" y="29" width="24" height="21"/>
+                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fV6-wt-CSP">
+                    <rect key="frame" x="19" y="24" width="24" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField appearanceType="aqua" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WwU-yq-bwe">
+                <textField appearanceType="aqua" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WwU-yq-bwe">
                     <rect key="frame" x="134" y="20" width="165" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                 </textField>
-                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tip Amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgY-2Y-JGq">
+                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip Amount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgY-2Y-JGq">
                     <rect key="frame" x="19" y="73" width="89" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$9.99" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cH4-aK-SJl">
+                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$9.99" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cH4-aK-SJl">
                     <rect key="frame" x="134" y="73" width="166" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view appearanceType="aqua" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Djk-tw-ICL">
+                <view appearanceType="aqua" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Djk-tw-ICL">
                     <rect key="frame" x="19" y="107" width="280" height="5"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Total" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O9e-BC-Kz1">
+                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O9e-BC-Kz1">
                     <rect key="frame" x="19" y="139" width="89" height="36"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="$0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="13B-Ue-HYU">
+                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="13B-Ue-HYU">
                     <rect key="frame" x="134" y="139" width="165" height="36"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <segmentedControl appearanceType="aqua" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="gmI-pt-dYq">
+                <segmentedControl appearanceType="aqua" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="gmI-pt-dYq">
                     <rect key="frame" x="19" y="207" width="280" height="29"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <segments>
@@ -73,20 +73,26 @@
                         <action selector="onTap:" destination="-1" eventType="valueChanged" id="ed9-uo-TD8"/>
                     </connections>
                 </segmentedControl>
+                <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eqm-3B-bKo">
+                    <rect key="frame" x="116" y="24" width="10" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
             <gestureRecognizers/>
             <constraints>
-                <constraint firstItem="O9e-BC-Kz1" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="161" id="0AA-7S-Vt0"/>
+                <constraint firstItem="O9e-BC-Kz1" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="139" id="0AA-7S-Vt0"/>
                 <constraint firstItem="gmI-pt-dYq" firstAttribute="leading" secondItem="O9e-BC-Kz1" secondAttribute="leading" id="2DY-Rx-By8"/>
                 <constraint firstItem="O9e-BC-Kz1" firstAttribute="baseline" secondItem="13B-Ue-HYU" secondAttribute="baseline" id="2uA-hZ-eij"/>
-                <constraint firstItem="WwU-yq-bwe" firstAttribute="bottom" secondItem="fV6-wt-CSP" secondAttribute="bottom" id="6iW-rZ-2UG"/>
+                <constraint firstItem="WwU-yq-bwe" firstAttribute="bottom" secondItem="fV6-wt-CSP" secondAttribute="bottom" constant="5" id="6iW-rZ-2UG"/>
                 <constraint firstItem="WwU-yq-bwe" firstAttribute="leading" secondItem="fV6-wt-CSP" secondAttribute="trailing" constant="91" id="EOi-Yn-hGe"/>
                 <constraint firstItem="WwU-yq-bwe" firstAttribute="trailing" secondItem="Djk-tw-ICL" secondAttribute="trailing" id="GWO-dd-zYu"/>
                 <constraint firstItem="gmI-pt-dYq" firstAttribute="top" secondItem="O9e-BC-Kz1" secondAttribute="bottom" constant="32" id="IPI-S9-uRj"/>
-                <constraint firstAttribute="trailing" secondItem="cH4-aK-SJl" secondAttribute="trailing" constant="19" id="JWL-tW-GXb"/>
-                <constraint firstAttribute="trailing" secondItem="WwU-yq-bwe" secondAttribute="trailing" constant="20" symbolic="YES" id="K2H-RH-qZ8"/>
-                <constraint firstItem="WwU-yq-bwe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="42" id="Qp4-sH-gGa"/>
+                <constraint firstAttribute="trailing" secondItem="cH4-aK-SJl" secondAttribute="trailing" constant="20" id="JWL-tW-GXb"/>
+                <constraint firstAttribute="trailing" secondItem="WwU-yq-bwe" secondAttribute="trailing" constant="21" id="K2H-RH-qZ8"/>
+                <constraint firstItem="WwU-yq-bwe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="Qp4-sH-gGa"/>
                 <constraint firstItem="xgY-2Y-JGq" firstAttribute="leading" secondItem="fV6-wt-CSP" secondAttribute="leading" id="R29-in-unV"/>
                 <constraint firstItem="Djk-tw-ICL" firstAttribute="leading" secondItem="xgY-2Y-JGq" secondAttribute="leading" id="Vxs-Np-qSG"/>
                 <constraint firstItem="gmI-pt-dYq" firstAttribute="trailing" secondItem="13B-Ue-HYU" secondAttribute="trailing" id="cd8-XR-Kfc"/>
@@ -97,9 +103,9 @@
                 <constraint firstItem="13B-Ue-HYU" firstAttribute="leading" secondItem="cH4-aK-SJl" secondAttribute="leading" id="jB9-DY-b4h"/>
                 <constraint firstItem="cH4-aK-SJl" firstAttribute="leading" secondItem="WwU-yq-bwe" secondAttribute="leading" id="jR8-0T-V2v"/>
                 <constraint firstItem="Djk-tw-ICL" firstAttribute="trailing" secondItem="13B-Ue-HYU" secondAttribute="trailing" id="nmH-vF-Lif"/>
-                <constraint firstItem="fV6-wt-CSP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" symbolic="YES" id="onE-Ev-KU4"/>
+                <constraint firstItem="fV6-wt-CSP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="19" id="onE-Ev-KU4"/>
                 <constraint firstItem="cH4-aK-SJl" firstAttribute="baseline" secondItem="xgY-2Y-JGq" secondAttribute="baseline" id="qDz-56-0Mg"/>
-                <constraint firstItem="xgY-2Y-JGq" firstAttribute="top" secondItem="fV6-wt-CSP" secondAttribute="bottom" constant="23" id="y52-Vp-1zX"/>
+                <constraint firstItem="xgY-2Y-JGq" firstAttribute="top" secondItem="fV6-wt-CSP" secondAttribute="bottom" constant="28" id="y52-Vp-1zX"/>
                 <constraint firstItem="Djk-tw-ICL" firstAttribute="top" secondItem="xgY-2Y-JGq" secondAttribute="bottom" constant="13" id="zWT-IU-osc"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
